# ir-airbyte

airbyte-integrations/connectors/destination-clickhouse-s3-sqs/: README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/destination-clickhouse-s3-sqs/destination_clickhouse_s3_sqs/: __init__.py  destination.py  run.py  spec.json
airbyte-integrations/connectors/destination-clickhouse-s3-sqs/sample_files/: configured_catalog.json  records.json
airbyte-integrations/connectors/source-mongodb-v2/: acceptance-test-config.yml
airbyte-integrations/connectors/source-mongodb-v2/src/test-integration/java/io/airbyte/integrations/source/mongodb/: MongoDbSourceAcceptanceTest.java
airbyte-integrations/connectors/source-s3-sqs/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-s3-sqs/source_s3_sqs/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-s3-sqs/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
